--- a/sass/home.scss
+++ b/sass/home.scss
@@ -41,7 +41,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;    
-    width: 100%;
+    width: 100vw;
     height: 35em;
     h1 {
         font-size: 4em;
@@ -57,7 +57,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;    
-    width: 100%;
+    width: 100vw;
     height: 35em;
     h1 {
         font-size: 4em;
@@ -74,7 +74,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;    
-    width: 100%;
+    width: 100vw;
     height: 35em;
     h1 {
         font-size: 4em;
@@ -91,7 +91,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;    
-    width: 100%;
+    width: 100vw;
     height: 35em;
     h1 {
         font-size: 4em;
@@ -108,7 +108,7 @@ body {
 //Black and Button
 .info {
     background-color: #000;
-    width: 100%;
+    width: 100vw;
     p {
         margin: 0 auto;
         color: #fff;
