--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -21,7 +21,25 @@ body {
   list-style: none;
   padding-left: 75%;
 }
-/* line 19, ../sass/home.scss */
+@media (max-width: 1148px) {
+  /* line 15, ../sass/home.scss */
+  #nav ul {
+    padding-left: 65%;
+  }
+}
+@media (max-width: 820px) {
+  /* line 15, ../sass/home.scss */
+  #nav ul {
+    padding-left: 50%;
+  }
+}
+@media (max-width: 576px) {
+  /* line 15, ../sass/home.scss */
+  #nav ul {
+    padding: 0;
+  }
+}
+/* line 28, ../sass/home.scss */
 #nav ul li {
   margin: 0;
   float: left;
@@ -30,7 +48,7 @@ body {
   font-family: 'Verdana', 'Helvetica', sans-serif;
   font-weight: 600;
 }
-/* line 26, ../sass/home.scss */
+/* line 35, ../sass/home.scss */
 #nav ul li a {
   display: block;
   color: #fff;
@@ -39,16 +57,16 @@ body {
   text-align: center;
 }
 
-/* line 39, ../sass/home.scss */
+/* line 48, ../sass/home.scss */
 .man_mtn {
   background-image: url(../img/man_mtn.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
+  width: 100vw;
   height: 35em;
 }
-/* line 46, ../sass/home.scss */
+/* line 55, ../sass/home.scss */
 .man_mtn h1 {
   font-size: 4em;
   font-family: 'Tahoma', sans-serif;
@@ -56,17 +74,54 @@ body {
   padding: 1em 0 0 3em;
   width: 25%;
 }
+@media (max-width: 1127px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    width: 30%;
+  }
+}
+@media (max-width: 939px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    padding: 1.5em 0 0 1em;
+    font-size: 3.5em;
+  }
+}
+@media (max-width: 822px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    width: 40%;
+  }
+}
+@media (max-width: 626px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    width: 50%;
+  }
+}
+@media (max-width: 563px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    font-size: 3.25em;
+  }
+}
+@media (max-width: 469px) {
+  /* line 55, ../sass/home.scss */
+  .man_mtn h1 {
+    font-size: 3em;
+  }
+}
 
-/* line 55, ../sass/home.scss */
+/* line 86, ../sass/home.scss */
 .mtn {
   background-image: url(../img/mtn.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
+  width: 100vw;
   height: 35em;
 }
-/* line 62, ../sass/home.scss */
+/* line 93, ../sass/home.scss */
 .mtn h1 {
   font-size: 4em;
   font-family: 'Tahoma', sans-serif;
@@ -75,36 +130,110 @@ body {
   padding: 4em 0 0 3em;
   width: 50%;
 }
+@media (max-width: 1180px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    font-size: 3.5em;
+  }
+}
+@media (max-width: 1034px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    font-size: 3.25em;
+  }
+}
+@media (max-width: 959px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    padding: 4em 0 0 1.5em;
+    width: 65%;
+  }
+}
+@media (max-width: 738px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    padding: 4em 0 0 .75em;
+    width: 80%;
+  }
+}
+@media (max-width: 599px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 452px) {
+  /* line 93, ../sass/home.scss */
+  .mtn h1 {
+    width: 90%;
+  }
+}
 
-/* line 72, ../sass/home.scss */
+/* line 123, ../sass/home.scss */
 .wmn-bk {
   background-image: url(../img/wmn_bk.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  width: 100%;
+  width: 100vw;
   height: 35em;
 }
-/* line 79, ../sass/home.scss */
+@media (max-width: 780px) {
+  /* line 123, ../sass/home.scss */
+  .wmn-bk {
+    background-position: right;
+  }
+}
+/* line 133, ../sass/home.scss */
 .wmn-bk h1 {
   font-size: 4em;
   font-family: 'Tahoma', sans-serif;
   color: #000;
   margin: 0;
   padding: .5em 0 0 .5em;
-  width: 85%;
+  width: 90%;
+}
+@media (max-width: 1038px) {
+  /* line 133, ../sass/home.scss */
+  .wmn-bk h1 {
+    font-size: 3.5em;
+  }
+}
+@media (max-width: 904px) {
+  /* line 133, ../sass/home.scss */
+  .wmn-bk h1 {
+    font-size: 3.25em;
+  }
+}
+@media (max-width: 842px) {
+  /* line 133, ../sass/home.scss */
+  .wmn-bk h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 779px) {
+  /* line 133, ../sass/home.scss */
+  .wmn-bk h1 {
+    width: 70%;
+  }
+}
+@media (max-width: 560px) {
+  /* line 133, ../sass/home.scss */
+  .wmn-bk h1 {
+    width: 80%;
+  }
 }
 
-/* line 89, ../sass/home.scss */
+/* line 159, ../sass/home.scss */
 .skyline {
   background-image: url(../img/skyline.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
+  width: 100vw;
   height: 35em;
 }
-/* line 96, ../sass/home.scss */
+/* line 166, ../sass/home.scss */
 .skyline h1 {
   font-size: 4em;
   font-family: 'Tahoma', sans-serif;
@@ -114,13 +243,38 @@ body {
   padding: 4em 0 0 0;
   width: 100%;
 }
+@media (max-width: 900px) {
+  /* line 166, ../sass/home.scss */
+  .skyline h1 {
+    font-size: 3.5em;
+  }
+}
+@media (max-width: 708px) {
+  /* line 166, ../sass/home.scss */
+  .skyline h1 {
+    font-size: 3.25em;
+  }
+}
+@media (max-width: 600px) {
+  /* line 166, ../sass/home.scss */
+  .skyline h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 541px) {
+  /* line 166, ../sass/home.scss */
+  .skyline h1 {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
 
-/* line 109, ../sass/home.scss */
+/* line 192, ../sass/home.scss */
 .info {
   background-color: #000;
-  width: 100%;
+  width: 100vw;
 }
-/* line 112, ../sass/home.scss */
+/* line 195, ../sass/home.scss */
 .info p {
   margin: 0 auto;
   color: #fff;
@@ -129,7 +283,37 @@ body {
   width: 40%;
   padding: 4em 0;
 }
-/* line 120, ../sass/home.scss */
+@media (max-width: 1050px) {
+  /* line 195, ../sass/home.scss */
+  .info p {
+    width: 50%;
+  }
+}
+@media (max-width: 868px) {
+  /* line 195, ../sass/home.scss */
+  .info p {
+    width: 60%;
+  }
+}
+@media (max-width: 716px) {
+  /* line 195, ../sass/home.scss */
+  .info p {
+    width: 70%;
+  }
+}
+@media (max-width: 627px) {
+  /* line 195, ../sass/home.scss */
+  .info p {
+    padding: 2em 0;
+  }
+}
+@media (max-width: 520px) {
+  /* line 195, ../sass/home.scss */
+  .info p {
+    width: 80%;
+  }
+}
+/* line 218, ../sass/home.scss */
 .info h1 {
   font-size: 4em;
   font-family: 'Tahoma', sans-serif;
@@ -139,7 +323,7 @@ body {
   padding: 1em 0 2em 0;
   width: 100%;
 }
-/* line 129, ../sass/home.scss */
+/* line 227, ../sass/home.scss */
 .info .btn {
   background: transparent;
   color: #fff;
@@ -154,7 +338,7 @@ body {
   transition: background .5s ease, color .5s ease;
   cursor: pointer;
 }
-/* line 142, ../sass/home.scss */
+/* line 240, ../sass/home.scss */
 .info .btn:hover {
   background: #fff;
   color: #000;
