--- a/sass/home.scss
+++ b/sass/home.scss
@@ -2,6 +2,41 @@ body {
     margin: 0;
 }
 
+footer {
+    background-color: #000;
+    color: #fff;
+    width: 100vw;
+    max-width: 2000px;
+    position: absolute;
+    height: 5em;
+    left: 0;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    p {
+        //position: relative;
+        margin: 0;
+        padding: 2em .5em;
+        display:inline-block;
+        top: 2em;
+        text-align: center;
+    }
+    a {
+        //position: relative;
+        margin: 0;
+        padding: 2em .5em 1em .5em;
+        display: inline-block;
+        text-align: center;
+        text-decoration: none;
+        color: #fff;
+    }
+}
+
+h1 {
+    font-size: 4em;
+    font-family: 'Tahoma', sans-serif;
+    margin: 0; 
+}
+
 #nav {
     margin: 0 auto;
     top: 0;
@@ -9,12 +44,13 @@ body {
     width: 100vw;
     padding: 0;
     height: 4em;
-    background-color: #888888;
+    background-color: transparent;
     text-align: center;
     transition: top 0.5s ease;
     ul {
         margin: 0;
         list-style: none;
+        //padding-top: 1em;
         padding-left: 75%;
         @media (max-width: 1148px) {
             padding-left: 65%;
@@ -44,18 +80,17 @@ body {
 }
 
 // Pics
-
-.man_mtn {
-    background-image: url(../img/man_mtn.jpg);
+.pic_contain {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;    
     width: 100vw;
     height: 35em;
+}
+
+.man_mtn {
+    background-image: url(../img/man_mtn.jpg);
     h1 {
-        font-size: 4em;
-        font-family: 'Tahoma', sans-serif;
-        margin: 0;
         padding: 1em 0 0 3em;
         width: 25%;
         @media (max-width: 1127px) {
@@ -85,16 +120,8 @@ body {
 
 .mtn {
     background-image: url(../img/mtn.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;    
-    width: 100vw;
-    height: 35em;
     h1 {
-        font-size: 4em;
-        font-family: 'Tahoma', sans-serif;
         color: #fff;
-        margin: 0;
         padding: 4em 0 0 3em;
         width: 50%;
         @media (max-width: 1180px) {
@@ -122,19 +149,12 @@ body {
 
 .wmn-bk {
     background-image: url(../img/wmn_bk.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top;    
-    width: 100vw;
-    height: 35em;
+    background-position: top;
     @media (max-width: 780px) {
         background-position: right;
     }
     h1 {
-        font-size: 4em;
-        font-family: 'Tahoma', sans-serif;
         color: #000;
-        margin: 0;
         padding: .5em 0 0 .5em;
         width: 90%;
         @media (max-width: 1038px) {
@@ -158,15 +178,7 @@ body {
 
 .skyline {
     background-image: url(../img/skyline.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;    
-    width: 100vw;
-    height: 35em;
     h1 {
-        font-size: 4em;
-        font-family: 'Tahoma', sans-serif;
-        margin: 0;
         color: #fff;
         text-align: center;
         padding: 4em 0 0 0;
@@ -195,7 +207,8 @@ body {
     p {
         margin: 0 auto;
         color: #fff;
-        font-size: 1.25em;
+        font-family: 'Verdana', sans-serif;
+        font-size: 1.15em;
         line-height: 1.5em;
         width: 40%;
         padding: 4em 0;
@@ -216,21 +229,17 @@ body {
         }
     }
     h1 {
-        font-size: 4em;
-        font-family: 'Tahoma', sans-serif;
-        margin: 0;
         color: #fff;
         text-align: center;
-        padding: 1em 0 2em 0;
+        padding: 1em 0;
         width: 100%;
     }
     .btn {
         background: transparent;
         color: #fff;
         border: 3px solid #fff;
-        border-radius: 1em;
         margin: 0 auto;
-        width: 25%;
+        width: 5em;
         padding: .25em;
         text-align: center;
         font-size: 2em;
