--- a/sass/home.scss
+++ b/sass/home.scss
@@ -15,7 +15,7 @@ footer {
     p {
         //position: relative;
         margin: 0;
-        padding: 2em .5em;
+        padding: 2em .5em 1em .5em;
         display:inline-block;
         top: 2em;
         text-align: center;
